--- a/core/templates/core/diarioAlimentar.html
+++ b/core/templates/core/diarioAlimentar.html
@@ -32,9 +32,28 @@
             <i class="ph ph-notepad"></i>
             <p>Ainda não há registros para esse dia</p>
           </div>
-          <div class="button-registrar">
+          <button class="button-registrar" id="abrirModal" type="button">
             <i class="ph ph-plus"></i>
-            <button id="abrirModal" type="button">Registrar</button>
+            Registrar
+          </button>
+        </section>
+        <section class="dia">
+          <div class="datas">
+            <div class="container-datas">
+              <h1 class="dia-semana">Terça</h1>
+              <h1 class="data">26</h1>
+            </div>
+            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
+          </div>
+          <div class="container-registros">
+            <div class="registros">
+              <i class="ph ph-notepad"></i>
+              <p>Ainda não há registros para esse dia</p>
+            </div>
+            <button class="button-registrar" id="abrirModal" type="button">
+              <i class="ph ph-plus"></i>
+              Registrar
+            </button>
           </div>
         </section>
         <section class="dia">
@@ -50,29 +69,10 @@
               <i class="ph ph-notepad"></i>
               <p>Ainda não há registros para esse dia</p>
             </div>
-            <div class="button-registrar">
+            <button class="button-registrar" id="abrirModal" type="button">
               <i class="ph ph-plus"></i>
-              <button id="abrirModal" type="button">Registrar</button>
-            </div>
-          </div>
-        </section>
-        <section class="dia">
-          <div class="datas">
-            <div class="container-datas">
-              <h1 class="dia-semana">Terça</h1>
-              <h1 class="data">26</h1>
-            </div>
-            {% comment %} <hr class="linha-vertical" /> {% endcomment %}
-          </div>
-          <div class="container-registros">
-            <div class="registros">
-              <i class="ph ph-notepad"></i>
-              <p>Ainda não há registros para esse dia</p>
-            </div>
-            <div class="button-registrar">
-              <i class="ph ph-plus"></i>
-              <button id="abrirModal" type="button">Registrar</button>
-            </div>
+              Registrar
+            </button>
           </div>
         </section>
         <div class="mes">
@@ -93,10 +93,10 @@
               <i class="ph ph-notepad"></i>
               <p>Ainda não há registros para esse dia</p>
             </div>
-            <div class="button-registrar">
+            <button class="button-registrar" id="abrirModal" type="button">
               <i class="ph ph-plus"></i>
-              <button id="abrirModal" type="button">Registrar</button>
-            </div>
+              Registrar
+            </button>
           </div>
         </section>
         <section class="dia">
@@ -112,10 +112,11 @@
               <i class="ph ph-notepad"></i>
               <p>Ainda não há registros para esse dia</p>
             </div>
-            <div class="button-registrar">
+
+            <button class="button-registrar" id="abrirModal" type="button">
               <i class="ph ph-plus"></i>
-              <button id="abrirModal" type="button">Registrar</button>
-            </div>
+              Registrar
+            </button>
           </div>
         </section>
       </div>
