--- a/core/templates/core/diarioAlimentar.html
+++ b/core/templates/core/diarioAlimentar.html
@@ -76,9 +76,7 @@
           </div>
         </section>
         <div class="mes">
-          <p>
-            <strong>Setembro</strong>
-          </p>
+          <p>Setembro</p>
         </div>
         <section class="dia">
           <div class="datas">
