--- a/core/static/core/estilos/novo-formulario.css
+++ b/core/static/core/estilos/novo-formulario.css
@@ -9,6 +9,10 @@
     width: 100%;
 }
 
+.conteudo-principal label {
+    margin: 0;
+}
+
 .novo-formulario {
     width: 100%;
     max-width: 598px;
@@ -45,11 +49,20 @@ input[type="radio"] {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin-top: 0;
     gap: 12px;
+}
+
+.form-item label {
+    color: black;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 0;
 }
 
 input,
 textarea {
+    width: 100%;
     border: 1px solid #A8A8A8;
     border-radius: 10px;
     padding: 12px;
@@ -92,6 +105,15 @@ textarea::placeholder {
 
 .tipo-formulario {
     color: #0C9A61;
+    display: flex;
+    gap: 7px;
+    align-items: center;
+}
+
+.tipo-formulario label {
+    font-size: 15px;
+    font-weight: 800;
+    margin: 0;
 }
 
 
@@ -107,6 +129,10 @@ textarea::placeholder {
 
 .checkbox:hover {
     cursor: pointer;
+}
+
+.checkbox label {
+    font-size: 16px;
 }
 
 input[type="checkbox"] {
