--- a/core/static/core/estilos/estilo-cadastrar-paciente.css
+++ b/core/static/core/estilos/estilo-cadastrar-paciente.css
@@ -1,9 +1,17 @@
-.container-campos-paciente label{
+.formulario-paciente {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.formulario-paciente label {
     color: #000;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
 }
-.conteudo-topo-paciente{
+
+.conteudo-topo-paciente {
     display: flex;
     justify-content: space-between;
     margin-left: 52px;
@@ -11,116 +19,156 @@
     margin-bottom: 32px;
     margin-right: 26px;
 }
-.conteudo-topo-paciente button{
+
+.conteudo-topo-paciente button {
     border: none;
     background-color: #FFFFFF;
 }
-.conteudo-topo-paciente .ph-x{
+
+.conteudo-topo-paciente .ph-x {
     color: #000000;
 }
-.conteudo-topo-paciente h1{
+
+.titulo-modal {
     color: #000;
     font-family: 'Roboto', sans-serif;
     font-size: 28px;
+    font-weight: bold;
 }
-.cadastro-de-paciente{
+
+dialog.cadastro-de-paciente {
     max-width: 640px;
     max-height: 559px;
     border: none;
+    position: relative;
+    padding: 28px 52px;
+    margin: auto;
 }
-.nome-paciente{
-    margin-left: 46px;
+
+.conteudo-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 32px;
 }
-.nome-paciente input{
+
+.titulo-modal,
+.formulario-paciente,
+.footer-modal-criar-paciente {
+    width: 100%;
+}
+
+#fechar-modal {
+    position: absolute;
+}
+
+.form-item input {
     border-radius: 8px;
-    border: 1px solid  #F4F3F3;
-    width: 548px;
-    height: 44px;
-    margin-top: 8px;
-    margin-bottom: 20px;
+    border: 1px solid #F4F3F3;
+    width: 100%;
+    padding: 12px 16px;
+    margin-right: 1px;
+    font-size: 14px;
 }
-.row-2-labels{
+
+.row-2-labels {
     display: flex;
     justify-content: space-between;
-    margin-left: 46px;
     gap: 28px;
 }
-.row-2-labels input{
+
+.row-2-labels input {
     width: 265px;
     height: 44px;
     border-radius: 8px;
-    border: 1px solid  #F4F3F3;
+    border: 1px solid #F4F3F3;
 }
-.cpf-paciente{
+
+.cpf-paciente {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
-.whatsapp-paciente{
+
+.whatsapp-paciente {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     margin-right: 48px;
 }
-.row-3-labels{
+
+.container-inputs {
     display: flex;
     justify-content: space-between;
-    margin-left: 46px;
+    width: 100%;
+    gap: 46px;
 }
-.row-3-labels input{
-    width: 138px;
-    height: 40px;
-    border-radius: 8px;
-    border: 1px solid  #F4F3F3;
-    margin-top: 8px;
-}
-.idade-paciente{
+
+.idade-paciente {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
-.peso-paciente{
+
+.peso-paciente {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
-.altura-paciente{
+
+.altura-paciente {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
-.altura-paciente input{
+
+.altura-paciente input {
     margin-right: 48px;
 }
-.email-paciente{
-    margin-left: 46px;
-}
-.email-paciente input{
-    width: 547px;
-    height: 44px;
-    border-radius: 8px;
-    border: 1px solid  #F4F3F3;
-    margin-top: 8px;
-    margin-bottom: 20px;
-}
-.buttons-cadastrar-paciente{
-    float: right;
-    margin-right: 46px;
+
+.buttons-cadastrar-paciente {
     display: flex;
     gap: 20px;
 }
-.buttons-cadastrar-paciente #botao-salvar{
+
+.buttons-cadastrar-paciente #botao-salvar {
     border-radius: 10px;
-    background:  #0C9A61;
+    background: #0C9A61;
     border: none;
-    color:  #FFFFFF;
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     width: 103px;
     height: 43px;
 }
-.buttons-cadastrar-paciente #botao-cancelar{
+
+.buttons-cadastrar-paciente #botao-cancelar {
     border-radius: 10px;
     border: 1px solid #F4F3F3;
-    background:  #FFFFFF;
+    background: #FFFFFF;
     width: 103px;
     height: 43px;
-    color:  #141623;
+    color: #141623;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
+}
+
+.footer-modal-criar-paciente {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 20px;
+}
+
+.footer-modal-criar-paciente button {
+    border: none;
+    padding: 10px 24px;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#botao-salvar-paciente {
+    color: #FFFFFF;
+    background-color: #0C9A61;
+}
+
+#botao-cancelar-paciente {
+    background-color: transparent;
+    color: black;
 }
