--- a/core/templates/core/diario-alimentar.html
+++ b/core/templates/core/diario-alimentar.html
@@ -5,7 +5,7 @@
   <main id="visualizar-diario">
     {% block header %}
       <header>
-        <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+        <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
         <div class="informacoes-do-usuario">
           <div class="texto-informacoes-do-usuario">
