--- a/core/templates/core/diarioAlimentar.html
+++ b/core/templates/core/diarioAlimentar.html
@@ -5,7 +5,7 @@
   <body>
     <main id="visualizar-diario">
       <header>
-        <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+        <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
         <div class="informacoes-do-usuario">
           <div class="texto-informacoes-do-usuario">
