--- a/core/templates/core/meus-formularios.html
+++ b/core/templates/core/meus-formularios.html
@@ -4,7 +4,7 @@
 
 {% block sidebar %}
   <nav class="side-bar">
-    <a href="#" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
+    <a href="/home" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %} " alt="Logo DietHub" /></a>
 
     <ul>
       <li class="opcao-do-menu">
