--- a/core/static/core/estilos/estilo-cadastrar-paciente.css
+++ b/core/static/core/estilos/estilo-cadastrar-paciente.css
@@ -43,6 +43,7 @@ dialog.cadastro-de-paciente {
     position: relative;
     padding: 28px 52px;
     margin: auto;
+    border-radius: 10px;
 }
 
 .conteudo-modal {
@@ -171,4 +172,20 @@ dialog.cadastro-de-paciente {
 #botao-cancelar-paciente {
     background-color: transparent;
     color: black;
+}
+
+@keyframes scale-in {
+    0% {
+        -webkit-transform: scale(0);
+                transform: scale(0);
+    }
+    100% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+}
+
+dialog.cadastro-de-paciente {
+    -webkit-animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+	        animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
 }
