--- a/core/static/core/estilos/estilo.css
+++ b/core/static/core/estilos/estilo.css
@@ -76,3 +76,19 @@ a {
     font-size: 20px;
     color: #A8A8A8;
 }
+
+@keyframes scale-in {
+    0% {
+        -webkit-transform: scale(0);
+                transform: scale(0);
+    }
+    100% {
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+}
+
+dialog {
+    -webkit-animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+	        animation: scale-in 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940);
+}
