--- a/core/static/core/estilos/estilo-login.css
+++ b/core/static/core/estilos/estilo-login.css
@@ -85,7 +85,7 @@ label {
     border-radius: 10px;
     font-size: 16px;
     padding: 12px 22px;
-    color: #E2E2E2;
+    color: black;
     margin-bottom: 8px;
 }
 
