:art: corrigir texto em modal tipo de questão

--- a/core/templates/core/tipo-questao.html
+++ b/core/templates/core/tipo-questao.html
@@ -8,10 +8,9 @@
       <button id="fecharModal"><i class="ph ph-x"></i></button>
     </div>
     <div class="questoes">
-      <label>Nome</label>
+      <label>Tipo da questão</label>
       <select>
-        <option value="default">Ex: John Doe</option>
-        <option>Aberta</option>
+        <option value="default">Aberta</option>
         <option>Opção única</option>
         <option>Múltipla escolha</option>
       </select>
