--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -81,6 +81,6 @@
       {% endblock %}
     </section>
   </main>
-  {% include 'core/cadastrarPaciente.html' %} 
+  {% include 'nutricionista/cadastrarPaciente.html' %} 
 </body>
 {% endblock %}
