--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,4 +1,4 @@
-{% extends 'core/collapse.html' %}
+{% extends 'paciente/collapse.html' %}
 
 {% load static %}
 
@@ -81,6 +81,6 @@
       {% endblock %}
     </section>
   </main>
-  {% include 'nutricionista/cadastrarPaciente.html' %} 
+  {% include 'paciente/cadastrarPaciente.html' %} 
 </body>
 {% endblock %}
