--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,6 +41,8 @@
 
     <script src="{% static 'js/modal.js' %}"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
+
   </head>
 
   <body>
