--- a/paciente/templates/paciente/collapse.html
+++ b/paciente/templates/paciente/collapse.html
@@ -210,6 +210,6 @@
     </li>
   </ul>
   </main>
-  {% include 'core/cadastrar-dieta.html' %} 
+  {% include 'dieta/cadastrar-dieta.html' %} 
 </body>
 {% endblock %}
