:hammer: mover views e urls para app de alimento

--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -1,4 +1,4 @@
-{% extends 'core/collapse-alimentos.html' %}
+{% extends 'alimento/collapse-alimentos.html' %}
 
 {% load static %}
 
@@ -91,6 +91,6 @@
       {% endblock %}
     </section>
   </main>
-  {% include 'core/cadastrarAlimento.html' %} 
+  {% include 'alimento/cadastrarAlimento.html' %} 
 </body>
 {% endblock %}
