:hammer: mover views e urls para app de diario

--- a/diario/templates/diario/diarioAlimentar.html
+++ b/diario/templates/diario/diarioAlimentar.html
@@ -119,7 +119,7 @@
         </section>
       </div>
     </main>
-    {% include 'core/registrarProgresso.html' %}
+    {% include 'diario/registrarProgresso.html' %}
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         const openModal = document.getElementById('abrirModal')
