--- a/paciente/templates/paciente/cadastrarPaciente.html
+++ b/paciente/templates/paciente/cadastrarPaciente.html
@@ -1,7 +1,7 @@
 
     <div class="conteudo-modal">
       <p class="titulo-modal">Criar paciente</p>
-      <form class="formulario-paciente" method="post" action="{% url 'cadastrar-paciente' %}">
+      <form class="formulario-paciente" id="formulario" method="post" action="{% url 'cadastrar-paciente' %}">
         {% csrf_token %}
         <div class="form-item">
           <label>Nome</label>
@@ -36,9 +36,14 @@
           </div>
         </div>
         <div class="footer-modal-criar-paciente">
-          <button id="botao-cancelar-paciente" type="Cancelar">Cancelar</button>
+          <button id="botao-cancelar-paciente" type="button">Cancelar</button>
           <button id="botao-salvar-paciente" type="submit">Salvar</button>
         </div>
       </form>
-      
     </div>
+<script>
+  document.getElementById("botao-cancelar-paciente").addEventListener("click", function() {
+    var form = document.getElementById("formulario");
+    form.reset();
+  });
+</script>
