--- a/alimento/templates/alimento/alimentos.html
+++ b/alimento/templates/alimento/alimentos.html
@@ -77,7 +77,9 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Alimentos</h1>
 
-        <button class="botao-padrao" id="abrirModal" type="button">Novo alimento</button>
+        <button class="botao-padrao" id="abrirModal" type="button" hx-get={% url 'cadastrar-alimento' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
+          Novo alimento
+        </button>
       </div>
 
       <div class="nav-tipos-de-alimentos">
@@ -89,8 +91,14 @@
       {% block collapse_alimentos %}
         {{ block.super }}
       {% endblock %}
+
+      <dialog class="cadastro-alimento" id="myModal">
+        <button id="fecharModal"><i class="ph ph-x"></i></button>
+
+        <div id="modal"></div>
+      </dialog>
+    
     </section>
   </main>
-  {% include 'alimento/cadastrarAlimento.html' %} 
 </body>
 {% endblock %}
